progress in add button

--- a/public/index.html
+++ b/public/index.html
@@ -11,4 +11,8 @@
   <body>
     <div id="root"></div>
   </body>
+  <!-- <script type="text/javascript">
+      document.getElementById('cart-button').addEventListener('click',()=>{document.getElementById('modal-content').style.display='block'});
+      document.getElementsByClassName('closeBtn')[0].addEventListener('click',()=>{document.getElementById('modal-content').style.display='none'});
+  </script> -->
 </html>
